k8s/ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-private
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /post
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
